# nova-cpu-power

./: CMakeLists.txt  _clang-format  conanfile.txt
common/: cpu-power-interface.xml
daemon/: CMakeLists.txt  main.cpp
gui/: CMakeLists.txt  CPUPowerController.h  Main.qml  main.cpp
